# v10r

./: .dockerignore  .gitignore  .venv-reminder  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.test.yml  porter.yaml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-extras.in  requirements.in  requirements.txt
.github/workflows/: test.yml
docker/: test-config.yml
docker/mock-infinity/: Dockerfile  mock_server.py  nginx.conf
docker/postgres/init-scripts/: 01-enable-pgvector.sql  02-mock-data.sql
docs/: api-reference.md  architecture.md  configuration.md  development.md  getting-started.md  index.md
examples/: simple-config.yaml  v10r-config.yaml
scripts/: load_test.py  test_system.py
src/v10r/: __init__.py  cli.py  config.py  exceptions.py  listener.py  registration.py  worker.py
src/v10r/database/: __init__.py  connection.py  health.py  introspection.py
src/v10r/embedding/: __init__.py  base.py  custom_client.py  factory.py  infinity_client.py  openai_client.py
src/v10r/preprocessing/: __init__.py  cleaners.py  factory.py
src/v10r/schema/: __init__.py  collision_detector.py  metadata.py  operations.py  reconciler.py
tests/: __init__.py  conftest.py
tests/e2e/: test_basic_pipeline.py
tests/integration/: __init__.py  test_docker_integration.py
tests/unit/: __init__.py  test_cli.py  test_cli_extended.py  test_database_connection.py  test_database_health.py  test_database_introspection.py  test_embedding_base.py  test_embedding_clients.py  test_listener.py  test_preprocessing.py  test_registration.py  test_registration.py.backup  test_schema_collision_detector.py  test_schema_metadata.py  test_schema_operations.py  test_schema_reconciler.py  test_worker.py
